--- a/.github/workflows/build-dev-mac-arm64.yml
+++ b/.github/workflows/build-dev-mac-arm64.yml
@@ -1,4 +1,4 @@
-name: Build MacOS dev binary
+name: Build MacOS ARM dev binary
 on:
   workflow_dispatch:
 
@@ -33,6 +33,7 @@ jobs:
           retention-days: 5
         if: ${{ failure() }}
       - run: make
+      - run: arm64-apple-darwin21.4-strip par2
       - run: |
           wget -q -O- https://github.com/indygreg/apple-platform-rs/releases/download/apple-codesign%2F0.22.0/apple-codesign-0.22.0-x86_64-unknown-linux-musl.tar.gz | tar zxf -
           apple-codesign*/rcodesign sign par2
