--- a/.github/workflows/build-dev-mac-x64.yml
+++ b/.github/workflows/build-dev-mac-x64.yml
@@ -27,7 +27,7 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           path: ./config.log
-          name: configure-macos-arm64.log
+          name: configure-macos-x64.log
           retention-days: 5
         if: ${{ failure() }}
       - run: make
@@ -38,5 +38,5 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           path: ./par2.xz
-          name: par2cmdline-turbo-dev-macos-arm64.xz
+          name: par2cmdline-turbo-dev-macos-x64.xz
           retention-days: 5
