--- a/par2cmdline.vcxproj
+++ b/par2cmdline.vcxproj
@@ -139,7 +139,9 @@
     <ClInclude Include="src\descriptionpacket.h" />
     <ClInclude Include="src\diskfile.h" />
     <ClInclude Include="src\filechecksummer.h" />
+    <ClInclude Include="src\foreach_parallel.h" />
     <ClInclude Include="src\galois.h" />
+    <ClInclude Include="src\hasher.h" />
     <ClInclude Include="src\letype.h" />
     <ClInclude Include="src\libpar2.h" />
     <ClInclude Include="src\libpar2internal.h" />
